Fix newsfeed alignments
Closes #208

--- a/styles/_newsfeed.scss
+++ b/styles/_newsfeed.scss
@@ -11,43 +11,48 @@
     margin: 0 auto;
     max-width: $gotr-row-width;
     overflow: hidden;
-    position: absolute;
-    left: 0;
-    right: 0;
-
-    & .gotr-newsfeed-left {
-        float: left;
-    }
-
-    & .gotr-newsfeed-right {
-        float: right;
-    }
+    padding: 10px 15px;
 
     & .gotr-newsfeed-item {
-        display: inline-block;
         max-height: 40px;
-        padding: 10px 0;
+        float: left;
+
+        &.gotr-newsfeed-item-right {
+            float: right;
+        }
 
         & b {
             font-weight: 400;
             color: #080b0d;
         }
 
-        & .gotr-news-item-line, {
-            vertical-align: middle;
+        &.gotr-newsfeed-item-line {
+            position: absolute;
+            margin: 0 75px 0 60px;
+            line-height: 34px;
+
+            .gotr-newsfeed-item-line-text {
+                display: inline-block;
+                vertical-align: middle;
+                line-height: normal;
+
+                @media screen and (max-width: 480px) {
+                    font-size: 14px;
+                }
+            }
         }
 
-        & .gotr-newsfeed-item-pic {
+        &.gotr-newsfeed-item-pic {
             border-radius: 100%;
             border: 1px solid $gotr-white;
             box-sizing: border-box;
             display: inline-block;
             height: 40px;
-            width: 40px;
             margin-right: 10px;
-            vertical-align: middle;
             overflow: hidden;
             text-align: center;
+            vertical-align: middle;
+            width: 40px;
 
             img {
                 max-height: 40px;
@@ -72,13 +77,6 @@
                 display: inline-block;
                 vertical-align: middle;
             }
-        }
-    }
-
-    @media screen and (max-width: $gotr-row-cutoff) {
-        & .gotr-newsfeed-left, & .gotr-newsfeed-right {
-            padding-left: ($gotr-row-padding / 2);
-            padding-right: ($gotr-row-padding / 2);
         }
     }
 
